--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -1,87 +1,90 @@
-<div class="eqLogic eqLogic-widget allowResize" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;#style#;">
-	<div class="widget-name text-center">
-		<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
-		<a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
-		<span class="cmd refresh pull-right">
+<div class="eqLogic eqLogic-widget text-center allowResize #custom_layout# #eqLogic_class# #class# #category#" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;#style#;">
+	<div class="widget-name">
+		<span class="cmd refresh pull-left" style="padding-left: 5px;">
+			<span id="iconSSH#id#"></span>
+			<script>
+				if ('#cnx_ssh#' == 'OK') {
+					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH OK" class="fas fa-check tooltips" style="padding-left: 1px;color: var(--al-success-color) !important;"></i>';
+				}
+				if ('#cnx_ssh#' == 'KO') {
+					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH KO" class="fas fa-times tooltips" style="padding-left: 1px;color: var(--al-danger-color) !important;"></i>';
+				}
+			</script>
 			<span id="iconCron#id#"></span>
 			<script>
 				if ('#cron_status#' == '1') {
 					if ('#cron_status_custom#' == '1') {
-						document.getElementById('iconCron#id#').innerHTML = '<span title="Cron ON (Custom)" class="fas fa-play-circle tooltips" style="display: #cron_status_display#;color: var(--al-warning-color) !important;"></i>';
+						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron ON (Custom)" class="fas fa-play-circle tooltips" style="padding-left: 1px;display: #cron_status_display#;color: var(--al-warning-color) !important;"></i>';
 					} else {
-						document.getElementById('iconCron#id#').innerHTML = '<span title="Cron ON (Default)" class="fas fa-play-circle tooltips" style="display: #cron_status_display#;color: var(--al-success-color) !important;"></i>';
+						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron ON (Default)" class="fas fa-play-circle tooltips" style="padding-left: 1px;display: #cron_status_display#;color: var(--al-success-color) !important;"></i>';
 					}
 				}
 				if ('#cron_status#' == '0') {
 					if ('#cron_status_custom#' == '1') {
-						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron OFF (Custom)" class="fas fa-pause-circle tooltips" style="display: #cron_status_display#;color: var(--al-warning-color) !important;"></i>';
+						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron OFF (Custom)" class="fas fa-pause-circle tooltips" style="padding-left: 1px;display: #cron_status_display#;color: var(--al-warning-color) !important;"></i>';
 					} else {
-						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron OFF (Default)" class="fas fa-pause-circle tooltips" style="display: #cron_status_display#;color: var(--al-danger-color) !important;"></i>';
+						document.getElementById('iconCron#id#').innerHTML = '<i title="Cron OFF (Default)" class="fas fa-pause-circle tooltips" style="padding-left: 1px;display: #cron_status_display#;color: var(--al-danger-color) !important;"></i>';
 					}
 				}
 			</script>
-			<span id="iconSSH#id#"></span>
+			<span title="Redémarrer l'équipement" class="cmd reboot tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="display: #cmd_reboot_display#;">
+				<a class="action" style="cursor: pointer;"><i class="fas fa-redo" style="padding-left: 1px;"></i></a>
+			</span>
 			<script>
-				if ('#cnx_ssh#' == 'OK') {
-					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH OK" class="fas fa-check tooltips" style="color: var(--al-success-color) !important;"></i>';
-				}
-				if ('#cnx_ssh#' == 'KO') {
-					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH KO" class="fas fa-times tooltips" style="color: var(--al-danger-color) !important;"></i>';
-				}
+				document.querySelector('.reboot[data-cmd_id="#cmd_reboot_id#"] .action').addEventListener('click', function () {
+					jeeDialog.confirm({
+						title: '<i class="warning fas fa-question-circle"></i> Redémarrer l\'équipement',
+						message: 'Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?',
+						buttons: {
+							confirm: {
+								label: 'Redémarrer',
+								className: 'warning'
+							},
+							cancel: {
+								label: 'Annuler',
+								className: 'info'
+							}
+						},
+						callback: function (result) {
+							if (result) {
+								jeedom.cmd.execute({ id: '#cmd_reboot_id#' });
+							}
+						}
+					});
+				});
 			</script>
-			<span title="Eteindre l'équipement" class="poweroff tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="float: right;display: #cmd_poweroff_display#;">
-				<a class="action" style="cursor: pointer;"><i class="fas fa-power-off" style="padding-left:5px;"></i></a>
-				<script>
-					document.querySelector('.poweroff[data-cmd_id="#cmd_poweroff_id#"] .action')?.addEventListener('click', function () {
-						jeeDialog.confirm({
-							title: '<i class="danger fas fa-question-circle"></i> Eteindre l\'équipement',
-							message: 'Etes-vous sûr de vouloir éteindre l\'équipement #name# ?',
-							buttons: {
-								confirm: {
-									label: 'Eteindre',
-									className: 'danger'
-								},
-								cancel: {
-									label: 'Annuler',
-									className: 'info'
-								}
-							},
-							callback: function (result) {
-								if (result) {
-									jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
-								}
-							}
-						});
-					});
-				</script>
+			<span title="Eteindre l'équipement" class="cmd poweroff tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="display: #cmd_poweroff_display#;">
+				<a class="action" style="cursor: pointer;"><i class="fas fa-power-off" style="padding-left: 1px;"></i></a>
 			</span>
-			<span title="Redémarrer l'équipement" class="reboot tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="float: right;display: #cmd_reboot_display#;">
-				<a class="action" style="cursor: pointer;"><i class="fas fa-redo" style="padding-left:5px;"></i></a>
-				<script>
-					document.querySelector('.reboot[data-cmd_id="#cmd_reboot_id#"] .action').addEventListener('click', function () {
-						jeeDialog.confirm({
-							title: '<i class="warning fas fa-question-circle"></i> Redémarrer l\'équipement',
-							message: 'Etes-vous sûr de vouloir redémarrer l\'équipement #name# ?',
-							buttons: {
-								confirm: {
-									label: 'Redémarrer',
-									className: 'warning'
-								},
-								cancel: {
-									label: 'Annuler',
-									className: 'info'
-								}
+			<script>
+				document.querySelector('.poweroff[data-cmd_id="#cmd_poweroff_id#"] .action')?.addEventListener('click', function () {
+					jeeDialog.confirm({
+						title: '<i class="danger fas fa-question-circle"></i> Eteindre l\'équipement',
+						message: 'Etes-vous sûr de vouloir éteindre l\'équipement #name# ?',
+						buttons: {
+							confirm: {
+								label: 'Eteindre',
+								className: 'danger'
 							},
-							callback: function (result) {
-								if (result) {
-									jeedom.cmd.execute({ id: '#cmd_reboot_id#' });
-								}
+							cancel: {
+								label: 'Annuler',
+								className: 'info'
 							}
-						});
+						},
+						callback: function (result) {
+							if (result) {
+								jeedom.cmd.execute({ id: '#cmd_poweroff_id#' });
+							}
+						}
 					});
-				</script>
-			</span>
+				});
+			</script>
 		</span>
+		<span class="cmd refresh pull-right cursor" title="Rafraîchir" data-cmd_id="#refresh_id#">
+			<i class="fas fa-sync"></i>
+		</span>
+		<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
+		<a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
 	</div>
 	<div class="cmds text-left" style="display:block;">
 		<div class="tooltips" style="margin-left:5px;display: #distri_name_display#;">
