--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -1,6 +1,6 @@
 <div class="eqLogic eqLogic-widget text-center allowResize #custom_layout# #eqLogic_class# #class# #category#" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;#style#;">
 	<div class="widget-name">
-		<span class="cmd refresh pull-left" style="padding-left: 5px;">
+		<span class="cmd pull-left" style="padding-left: 5px;">
 			<span id="iconSSH#id#"></span>
 			<script>
 				if ('#cnx_ssh#' == 'OK') {
@@ -83,6 +83,15 @@
 		<span class="cmd refresh pull-right cursor" title="Rafraîchir" data-cmd_id="#refresh_id#">
 			<i class="fas fa-sync"></i>
 		</span>
+		<script>
+			if ('#refresh_id#' != '') {
+				document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.addEventListener('click', function() {
+					jeedom.cmd.execute({ id: '#refresh_id#' })
+			  	})
+			} else {
+				document.querySelector('.eqLogic[data-eqLogic_uid="#uid#"] .refresh')?.remove()
+			}
+		  </script>
 		<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
 		<a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
 	</div>
