--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -1,13 +1,29 @@
 <div class="eqLogic eqLogic-widget text-center allowResize #custom_layout# #eqLogic_class# #class# #category#" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;#style#;">
+	<style>
+		div.eqLogic-widget .cmd.monitorbtn {
+			margin-top: 5px !important;
+		  }
+		  div.eqLogic-widget .cmd.monitorbtn i {
+			color: var(--eqTitle-color) !important;
+			font-size: 12px !important;
+		  }
+		  div.eqLogic-widget .cmd.monitorbtn i:hover {
+			color: var(--linkHoverLight-color) !important;
+		  }
+		
+		  div.eqLogic-widget.editingMode .cmd.monitorbtn {
+			display: none;
+		  }
+	</style>
 	<div class="widget-name">
-		<span class="cmd pull-left" style="padding-left: 5px;">
+		<span class="cmd monitorbtn pull-left" style="padding-left: 5px;">
 			<span id="iconSSH#id#"></span>
 			<script>
 				if ('#cnx_ssh#' == 'OK') {
-					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH OK" class="fas fa-check tooltips" style="padding-left: 1px;color: var(--al-success-color) !important;"></i>';
+					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH OK" class="monitorbtn fas fa-check tooltips" style="padding-left: 1px;color: var(--al-success-color) !important;"></i>';
 				}
 				if ('#cnx_ssh#' == 'KO') {
-					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH KO" class="fas fa-times tooltips" style="padding-left: 1px;color: var(--al-danger-color) !important;"></i>';
+					document.getElementById('iconSSH#id#').innerHTML = '<i title="Connexion SSH KO" class="monitorbtn fas fa-times tooltips" style="padding-left: 1px;color: var(--al-danger-color) !important;"></i>';
 				}
 			</script>
 			<span id="iconCron#id#"></span>
@@ -27,7 +43,7 @@
 					}
 				}
 			</script>
-			<span title="Redémarrer l'équipement" class="cmd reboot tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="display: #cmd_reboot_display#;">
+			<span title="Redémarrer l'équipement" class="cmd monitorbtn reboot tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_reboot_id#" style="display: #cmd_reboot_display#;">
 				<a class="action" style="cursor: pointer;"><i class="fas fa-redo" style="padding-left: 1px;"></i></a>
 			</span>
 			<script>
@@ -53,7 +69,7 @@
 					});
 				});
 			</script>
-			<span title="Eteindre l'équipement" class="cmd poweroff tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="display: #cmd_poweroff_display#;">
+			<span title="Eteindre l'équipement" class="cmd monitorbtn poweroff tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="display: #cmd_poweroff_display#;">
 				<a class="action" style="cursor: pointer;"><i class="fas fa-power-off" style="padding-left: 1px;"></i></a>
 			</span>
 			<script>
