--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -1,16 +1,9 @@
 <div class="eqLogic eqLogic-widget text-center allowResize #custom_layout# #eqLogic_class# #class# #category#" data-eqType="#eqType#" data-eqLogic_id="#id#" data-eqLogic_uid="#uid#" data-version="#version#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="width: #width#;height: #height#;#style#;">
 	<style>
-		div.eqLogic-widget .cmd.monitorbtn {
-			margin-top: 5px !important;
-		}
 		div.eqLogic-widget .cmd.monitorbtn i {
-			color: var(--eqTitle-color) !important;
-			font-size: 16px !important;
+			padding-top: 7px;
+			font-size: 12px !important;
 		}
-		div.eqLogic-widget .cmd.monitorbtn i:hover {
-			color: var(--linkHoverLight-color) !important;
-		}
-	
 		div.eqLogic-widget.editingMode .cmd.monitorbtn {
 			display: none;
 		}
