--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -14,15 +14,12 @@
 		}
 		div.monitor-name-center {
 			flex: 1;
-			flex-wrap: wrap;
-			justify-content: space-between;
-			align-items: center;
+			justify-content: center;
 		}
 		div.monitor-name-left {
 			flex: 1;
 			padding-left: 5px;
 			float: left;
-			flex-wrap: wrap;
 			justify-content: flex-start;
 			align-items: center;
 		}
