--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -13,10 +13,12 @@
 			align-items: center;
 		}
 		div.monitor-name-center {
+			display: flex;
 			flex: 1;
 			justify-content: center;
 		}
 		div.monitor-name-left {
+			display: flex;
 			flex: 1;
 			padding-left: 5px;
 			float: left;
@@ -25,6 +27,7 @@
 		}
 
 		div.monitor-name-right {
+			display: flex;
 			flex: 1;
 			float: right;
 			justify-content: flex-end;
