--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -25,13 +25,16 @@
 			justify-content: flex-start;
 			align-items: center;
 		}
-
+		div.monitor-name-left span {
+			margin-right: 3px; /* Adjust the value as needed */
+		}
 		div.monitor-name-right {
 			display: flex;
 			flex: 1;
+			padding-right: 5px;
 			float: right;
 			justify-content: flex-end;
-			align-items: center;
+			align-items: center !important;
 		}
 
 	</style>
