--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -32,6 +32,7 @@
 			display: flex;
 			flex: 1;
 			padding-right: 5px;
+			margin-top : none !important;
 			float: right;
 			justify-content: flex-end;
 			align-items: center !important;
