--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -32,10 +32,13 @@
 			display: flex;
 			flex: 1;
 			padding-right: 5px;
-			margin-top : none !important;
 			float: right;
 			justify-content: flex-end;
-			align-items: center !important;
+			align-items: center;
+		}
+		div.monitor-name-right span {
+			margin-right: 3px;
+			margin-top: none;
 		}
 
 	</style>
