--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -37,8 +37,7 @@
 			align-items: center;
 		}
 		div.monitor-name-right span {
-			margin-right: 3px;
-			margin-top: none;
+			margin-top: none !important;
 		}
 
 	</style>
